"""initial schema

Revision ID: f216d914915c
Revises: 
Create Date: 2026-08-11 10:06:25.552256

"""
from __future__ import annotations

from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = 'f216d914915c'
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('patients',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('patient_id', sa.String(length=128), nullable=False),
    sa.Column('name', sa.String(length=128), nullable=False, comment='患者姓名（脱敏输出时替换为 token）'),
    sa.Column('gender', sa.String(length=8), nullable=True, comment='性别：male/female/other'),
    sa.Column('birth_date', sa.Date(), nullable=True, comment='出生日期'),
    sa.Column('identifiers_json', sa.Text(), nullable=True, comment='证件标识 JSON 数组（脱敏后为 token）'),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False, comment='记录创建时间'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_patients_patient_id'), 'patients', ['patient_id'], unique=True)
    op.create_table('care_plans',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('care_plan_id', sa.String(length=128), nullable=False),
    sa.Column('patient_id', sa.String(length=128), nullable=False, comment='所属患者 ID'),
    sa.Column('title', sa.String(length=256), nullable=True, comment='照护计划标题'),
    sa.Column('intent', sa.String(length=16), nullable=True, comment='意图：plan（出院计划）/ order（慢病照护）'),
    sa.Column('category', sa.String(length=32), nullable=True, comment='分类：discharge（出院）/ chronic（慢病）'),
    sa.Column('status', sa.String(length=32), nullable=True, comment='状态：active/completed/revoked'),
    sa.Column('period_start', sa.Date(), nullable=True, comment='计划起始日期'),
    sa.Column('period_end', sa.Date(), nullable=True, comment='计划结束日期'),
    sa.ForeignKeyConstraint(['patient_id'], ['patients.patient_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_care_plans_care_plan_id'), 'care_plans', ['care_plan_id'], unique=True)
    op.create_index(op.f('ix_care_plans_patient_id'), 'care_plans', ['patient_id'], unique=False)
    op.create_table('conditions',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('condition_id', sa.String(length=128), nullable=False),
    sa.Column('patient_id', sa.String(length=128), nullable=False, comment='所属患者 ID'),
    sa.Column('code', sa.String(length=64), nullable=True, comment='诊断编码（如 ICD-10：I10）'),
    sa.Column('display', sa.String(length=256), nullable=True, comment='诊断显示名（如"原发性高血压"）'),
    sa.Column('severity', sa.String(length=32), nullable=True, comment='严重程度：mild/moderate/severe'),
    sa.Column('onset_date', sa.Date(), nullable=True, comment='发病/确诊日期'),
    sa.ForeignKeyConstraint(['patient_id'], ['patients.patient_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_conditions_condition_id'), 'conditions', ['condition_id'], unique=True)
    op.create_index(op.f('ix_conditions_patient_id'), 'conditions', ['patient_id'], unique=False)
    op.create_table('consents',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('consent_id', sa.String(length=128), nullable=False),
    sa.Column('patient_id', sa.String(length=128), nullable=False, comment='所属患者 ID'),
    sa.Column('scope', sa.String(length=128), nullable=True, comment='授权范围（如 patient-privacy-consent）'),
    sa.Column('status', sa.String(length=16), nullable=True, comment='同意状态：active/inactive'),
    sa.Column('granted_to', sa.String(length=256), nullable=True, comment='授权对象（角色/组织/用途）'),
    sa.ForeignKeyConstraint(['patient_id'], ['patients.patient_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_consents_consent_id'), 'consents', ['consent_id'], unique=True)
    op.create_index(op.f('ix_consents_patient_id'), 'consents', ['patient_id'], unique=False)
    op.create_table('encounters',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('encounter_id', sa.String(length=128), nullable=False),
    sa.Column('patient_id', sa.String(length=128), nullable=False, comment='所属患者 ID'),
    sa.Column('encounter_type', sa.String(length=32), nullable=True, comment='就诊类型：inpatient/outpatient/emergency'),
    sa.Column('start_date', sa.Date(), nullable=True, comment='就诊开始日期'),
    sa.Column('end_date', sa.Date(), nullable=True, comment='就诊结束/出院日期'),
    sa.Column('discharge_to', sa.String(length=64), nullable=True, comment='出院去向：home/rehabilitation/other'),
    sa.ForeignKeyConstraint(['patient_id'], ['patients.patient_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_encounters_encounter_id'), 'encounters', ['encounter_id'], unique=True)
    op.create_index(op.f('ix_encounters_patient_id'), 'encounters', ['patient_id'], unique=False)
    op.create_table('fhir_audit_events',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('audit_id', sa.String(length=128), nullable=False),
    sa.Column('patient_id', sa.String(length=128), nullable=False, comment='所属患者 ID'),
    sa.Column('entity_type', sa.String(length=32), nullable=True, comment='被访问的 FHIR 资源类型：Patient/Observation/CarePlan/…'),
    sa.Column('entity_id', sa.String(length=128), nullable=True, comment='被访问的资源 ID'),
    sa.Column('action', sa.String(length=8), nullable=True, comment='操作类型：C（创建）/ R（读取）/ U（更新）/ D（删除）'),
    sa.Column('actor', sa.String(length=64), nullable=True, comment='操作人角色（如 doctor/nurse）'),
    sa.Column('occurred_at', sa.DateTime(timezone=True), nullable=False, comment='操作发生时间'),
    sa.ForeignKeyConstraint(['patient_id'], ['patients.patient_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_fhir_audit_events_audit_id'), 'fhir_audit_events', ['audit_id'], unique=True)
    op.create_index(op.f('ix_fhir_audit_events_patient_id'), 'fhir_audit_events', ['patient_id'], unique=False)
    op.create_table('medication_requests',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('med_request_id', sa.String(length=128), nullable=False),
    sa.Column('patient_id', sa.String(length=128), nullable=False, comment='所属患者 ID'),
    sa.Column('medication_code', sa.String(length=64), nullable=True, comment='药品编码（如 ATC/院内编码）'),
    sa.Column('medication_display', sa.String(length=256), nullable=True, comment='药品显示名（如"氨氯地平片 5mg"）'),
    sa.Column('dosage', sa.String(length=256), nullable=True, comment='用法用量（如"每日一次 5mg"）'),
    sa.Column('status', sa.String(length=32), nullable=True, comment='医嘱状态：active/completed/stopped'),
    sa.ForeignKeyConstraint(['patient_id'], ['patients.patient_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_medication_requests_med_request_id'), 'medication_requests', ['med_request_id'], unique=True)
    op.create_index(op.f('ix_medication_requests_patient_id'), 'medication_requests', ['patient_id'], unique=False)
    op.create_table('observations',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('observation_id', sa.String(length=128), nullable=False),
    sa.Column('patient_id', sa.String(length=128), nullable=False, comment='所属患者 ID'),
    sa.Column('code', sa.String(length=64), nullable=True, comment='检验编码（如 LOINC：8480-6）'),
    sa.Column('display', sa.String(length=256), nullable=True, comment='检验项显示名（如"收缩压"）'),
    sa.Column('value', sa.String(length=64), nullable=True, comment='检验数值（字符串形式）'),
    sa.Column('unit', sa.String(length=32), nullable=True, comment='单位（如 mmHg, mmol/L）'),
    sa.Column('effective_date', sa.Date(), nullable=True, comment='检验/测量有效日期'),
    sa.ForeignKeyConstraint(['patient_id'], ['patients.patient_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_observations_observation_id'), 'observations', ['observation_id'], unique=True)
    op.create_index(op.f('ix_observations_patient_id'), 'observations', ['patient_id'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_observations_patient_id'), table_name='observations')
    op.drop_index(op.f('ix_observations_observation_id'), table_name='observations')
    op.drop_table('observations')
    op.drop_index(op.f('ix_medication_requests_patient_id'), table_name='medication_requests')
    op.drop_index(op.f('ix_medication_requests_med_request_id'), table_name='medication_requests')
    op.drop_table('medication_requests')
    op.drop_index(op.f('ix_fhir_audit_events_patient_id'), table_name='fhir_audit_events')
    op.drop_index(op.f('ix_fhir_audit_events_audit_id'), table_name='fhir_audit_events')
    op.drop_table('fhir_audit_events')
    op.drop_index(op.f('ix_encounters_patient_id'), table_name='encounters')
    op.drop_index(op.f('ix_encounters_encounter_id'), table_name='encounters')
    op.drop_table('encounters')
    op.drop_index(op.f('ix_consents_patient_id'), table_name='consents')
    op.drop_index(op.f('ix_consents_consent_id'), table_name='consents')
    op.drop_table('consents')
    op.drop_index(op.f('ix_conditions_patient_id'), table_name='conditions')
    op.drop_index(op.f('ix_conditions_condition_id'), table_name='conditions')
    op.drop_table('conditions')
    op.drop_index(op.f('ix_care_plans_patient_id'), table_name='care_plans')
    op.drop_index(op.f('ix_care_plans_care_plan_id'), table_name='care_plans')
    op.drop_table('care_plans')
    op.drop_index(op.f('ix_patients_patient_id'), table_name='patients')
    op.drop_table('patients')
    # ### end Alembic commands ###
