"""initial schema

Revision ID: ee629101ba58
Revises: 
Create Date: 2026-08-11 10:01:58.663589

"""
from __future__ import annotations

from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = 'ee629101ba58'
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('knowledge_audit_logs',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('audit_id', sa.String(length=128), nullable=False, comment='审计事件唯一标识'),
    sa.Column('action_type', sa.String(length=64), nullable=False, comment='操作类型：knowledge_search/knowledge_deleted 等'),
    sa.Column('actor', sa.String(length=64), nullable=False, comment='操作者角色标识'),
    sa.Column('resource_type', sa.String(length=32), nullable=True, comment='资源类型：knowledge/search'),
    sa.Column('resource_id', sa.String(length=128), nullable=True, comment='资源 ID'),
    sa.Column('detail', sa.Text(), nullable=True, comment='事件详情（JSON 编码）'),
    sa.Column('session_id', sa.String(length=100), nullable=True, comment='请求 ID（session）'),
    sa.Column('occurred_at', sa.DateTime(timezone=True), nullable=False, comment='发生时间'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_knowledge_audit_logs_audit_id'), 'knowledge_audit_logs', ['audit_id'], unique=True)
    op.create_table('knowledge_documents',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('document_id', sa.String(length=128), nullable=False, comment='知识文档唯一标识'),
    sa.Column('title', sa.String(length=256), nullable=False, comment='知识文档标题'),
    sa.Column('version', sa.String(length=32), nullable=False, comment='文档版本号'),
    sa.Column('owner', sa.String(length=64), nullable=False, comment='文档归属部门/组织'),
    sa.Column('status', sa.String(length=32), nullable=False, comment='文档状态：review_pending/published/expired/withdrawn/superseded/archived/review_rejected'),
    sa.Column('effective_from', sa.DateTime(), nullable=True, comment='生效起始日期'),
    sa.Column('effective_until', sa.DateTime(), nullable=True, comment='生效截止日期'),
    sa.Column('source_format', sa.String(length=8), nullable=True, comment='源文件格式：txt/md/pdf/docx'),
    sa.Column('source_mime', sa.String(length=64), nullable=True, comment='源文件 MIME 类型'),
    sa.Column('source_hash', sa.String(length=128), nullable=True, comment='源文件 SHA-256 摘要'),
    sa.Column('source_byte_length', sa.Integer(), nullable=True, comment='源文件字节数'),
    sa.Column('content_hash', sa.String(length=128), nullable=True, comment='内容摘要（SHA-256）用于去重'),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False, comment='创建时间'),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=False, comment='最后更新时间'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_knowledge_documents_document_id'), 'knowledge_documents', ['document_id'], unique=True)
    op.create_index(op.f('ix_knowledge_documents_status'), 'knowledge_documents', ['status'], unique=False)
    op.create_table('knowledge_chunks',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('chunk_id', sa.String(length=128), nullable=False, comment='分块唯一标识'),
    sa.Column('document_id', sa.String(length=128), nullable=False, comment='所属文档 ID（FK）'),
    sa.Column('location', sa.String(length=64), nullable=True, comment='分块位置坐标（如页码、段落号）'),
    sa.Column('text', sa.Text(), nullable=False, comment='分块文本内容'),
    sa.Column('chunking_version', sa.String(length=16), nullable=True, comment='分块策略版本'),
    sa.Column('vector_id', sa.String(length=128), nullable=True, comment='向量索引 ID（Milvus）'),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False, comment='创建时间'),
    sa.ForeignKeyConstraint(['document_id'], ['knowledge_documents.document_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_knowledge_chunks_chunk_id'), 'knowledge_chunks', ['chunk_id'], unique=True)
    op.create_index(op.f('ix_knowledge_chunks_document_id'), 'knowledge_chunks', ['document_id'], unique=False)
    op.create_table('knowledge_ingestion_jobs',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('job_id', sa.String(length=128), nullable=False, comment='任务唯一标识'),
    sa.Column('status', sa.String(length=32), nullable=False, comment='任务状态：queued/parsing/review_pending/failed'),
    sa.Column('attempt', sa.Integer(), nullable=False, comment='尝试次数'),
    sa.Column('document_id', sa.String(length=128), nullable=True, comment='产出的文档 ID（FK）'),
    sa.Column('input_title', sa.String(length=256), nullable=True, comment='导入源标题'),
    sa.Column('input_version', sa.String(length=32), nullable=True, comment='导入源版本'),
    sa.Column('input_owner', sa.String(length=64), nullable=True, comment='导入源归属'),
    sa.Column('source_file_name', sa.String(length=255), nullable=True, comment='源文件名'),
    sa.Column('error_code', sa.String(length=32), nullable=True, comment='错误码'),
    sa.Column('error_message', sa.Text(), nullable=True, comment='错误详情'),
    sa.Column('error_retryable', sa.Boolean(), nullable=True, comment='是否可重试'),
    sa.Column('started_at', sa.DateTime(timezone=True), nullable=True, comment='开始时间'),
    sa.Column('completed_at', sa.DateTime(timezone=True), nullable=True, comment='完成时间'),
    sa.ForeignKeyConstraint(['document_id'], ['knowledge_documents.document_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_knowledge_ingestion_jobs_job_id'), 'knowledge_ingestion_jobs', ['job_id'], unique=True)
    op.create_index(op.f('ix_knowledge_ingestion_jobs_status'), 'knowledge_ingestion_jobs', ['status'], unique=False)
    op.create_table('knowledge_lifecycle_events',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('audit_id', sa.String(length=128), nullable=False, comment='审计事件唯一标识'),
    sa.Column('document_id', sa.String(length=128), nullable=True, comment='所属文档 ID（FK）'),
    sa.Column('event_type', sa.String(length=64), nullable=False, comment='事件类型：knowledge_imported/knowledge_status_changed 等'),
    sa.Column('actor', sa.String(length=64), nullable=False, comment='操作者角色标识'),
    sa.Column('detail', sa.Text(), nullable=True, comment='事件详情'),
    sa.Column('before_state', sa.String(length=32), nullable=True, comment='转移前状态'),
    sa.Column('after_state', sa.String(length=32), nullable=True, comment='转移后状态'),
    sa.Column('occurred_at', sa.DateTime(timezone=True), nullable=False, comment='发生时间'),
    sa.ForeignKeyConstraint(['document_id'], ['knowledge_documents.document_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_knowledge_lifecycle_events_audit_id'), 'knowledge_lifecycle_events', ['audit_id'], unique=True)
    op.create_index(op.f('ix_knowledge_lifecycle_events_document_id'), 'knowledge_lifecycle_events', ['document_id'], unique=False)
    op.create_table('knowledge_citations',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('citation_id', sa.String(length=128), nullable=False, comment='引用唯一标识'),
    sa.Column('document_id', sa.String(length=128), nullable=True, comment='被引用文档 ID（FK）'),
    sa.Column('chunk_id', sa.String(length=128), nullable=True, comment='被引用分块 ID（FK）'),
    sa.Column('location', sa.String(length=64), nullable=True, comment='知识源坐标（如章节、段落）'),
    sa.Column('coordinates', sa.String(length=128), nullable=True, comment='详细坐标信息'),
    sa.Column('excerpt', sa.Text(), nullable=True, comment='引用原文摘录'),
    sa.Column('retrieved_at', sa.DateTime(timezone=True), nullable=False, comment='检索时间'),
    sa.Column('retrieval_strategy_version', sa.String(length=16), nullable=True, comment='检索策略版本'),
    sa.ForeignKeyConstraint(['chunk_id'], ['knowledge_chunks.chunk_id'], ),
    sa.ForeignKeyConstraint(['document_id'], ['knowledge_documents.document_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_knowledge_citations_citation_id'), 'knowledge_citations', ['citation_id'], unique=True)
    op.create_index(op.f('ix_knowledge_citations_document_id'), 'knowledge_citations', ['document_id'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_knowledge_citations_document_id'), table_name='knowledge_citations')
    op.drop_index(op.f('ix_knowledge_citations_citation_id'), table_name='knowledge_citations')
    op.drop_table('knowledge_citations')
    op.drop_index(op.f('ix_knowledge_lifecycle_events_document_id'), table_name='knowledge_lifecycle_events')
    op.drop_index(op.f('ix_knowledge_lifecycle_events_audit_id'), table_name='knowledge_lifecycle_events')
    op.drop_table('knowledge_lifecycle_events')
    op.drop_index(op.f('ix_knowledge_ingestion_jobs_status'), table_name='knowledge_ingestion_jobs')
    op.drop_index(op.f('ix_knowledge_ingestion_jobs_job_id'), table_name='knowledge_ingestion_jobs')
    op.drop_table('knowledge_ingestion_jobs')
    op.drop_index(op.f('ix_knowledge_chunks_document_id'), table_name='knowledge_chunks')
    op.drop_index(op.f('ix_knowledge_chunks_chunk_id'), table_name='knowledge_chunks')
    op.drop_table('knowledge_chunks')
    op.drop_index(op.f('ix_knowledge_documents_status'), table_name='knowledge_documents')
    op.drop_index(op.f('ix_knowledge_documents_document_id'), table_name='knowledge_documents')
    op.drop_table('knowledge_documents')
    op.drop_index(op.f('ix_knowledge_audit_logs_audit_id'), table_name='knowledge_audit_logs')
    op.drop_table('knowledge_audit_logs')
    # ### end Alembic commands ###
